<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasure Source</string>
    <string name="loot_display">Results</string>
    <string name="action_settings">Settings</string>
    <string name="dbloader_service">Database Loader Service</string>
    

    
    <string name="apl">Average Party Level: </string>
    <string name="encr">Encounter CR: </string>
    
    <string name="difficulty">Encounter Difficulty: </string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_challenging">Challenging</string>
    <string name="difficulty_very_challenging">Very Challenging</string>
    
    <string name="treasure_size">Treasure Size: </string>
    <string name="treasure_size_quarter">Quarter</string>
    <string name="treasure_size_half">Half</string>
    <string name="treasure_size_normal">Normal</string>
    <string name="treasure_size_double">Double</string>
    <string name="treasure_size_triple">Triple</string>
    
    <string name="magic_level">Magic Level : </string>
    <string name="magic_level_low">Low</string>
    <string name="magic_level_medium">Medium</string>
    <string name="magic_level_high">High</string>
    
    <string name="residual_gold">Residual Gold Level</string>
    
    <string name="roll_for_mundane">Roll for Mundane Items?</string>
    
    <string name="roll_for_goods">Roll for Goods, Jewelry, Art?</string>
    
    <string name="discard_dupes">Throw out duplicate items?</string>
    
    <string name="limit_items_by_encounter_value">Limit items by value of encounter?</string>
    
    <string name="limit_by_item_type">Limit magic items by type? (check box to restrict)</string>
    <string name="armor_and_shields">Armor</string>
    <string name="weapons">Weapons</string>
    <string name="potions">Potions</string>
    <string name="rings">Rings</string>
    <string name="rods">Rods</string>
    <string name="scrolls">Scrolls</string>
    <string name="staves">Staves</string>
    <string name="wands">Wands</string>
    <string name="wondrous_items">Wondrous Items</string>

	<string name="display_settings">Display Options: </string>
	<string name="display_gold">Display gold value of each item?</string>
	<string name="display_chance">Display rolled d% values?</string>
	<string name="display_total">Display total value of items and gold?</string>
    
	<string name="button_roller">ROLL THE LOOT</string>
	<string name="loot_reroller">ROLL AGAIN</string>
	<string name="return_button">Back to Settings</string>

</resources>